--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pillow>=12.0.0",
     "pytesseract>=0.3.13",
+    "gradio>=4.0.0",
+    "opencv-python>=4.8.0",
+    "pandas>=2.0.0",
 ]
